--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,7 @@
   --color-light-gray: #C4C4C4;
 
   --border-radius: 30px;
-  --border: solid 1px var(--color-light)
+  --border: solid 1px var(--color-light);
 
   --font-family-base: 'Heebo', sans-serif;
   --font-family-accent: 'Yantramanav', sans-serif;
@@ -199,4 +199,23 @@
   --container-padding-x: 15px;
 
   --transition-duration: .2s;
+ }
+
+ body {
+  background-color: var(--color-dark);
+  font-family: var(--font-family-base);
+  color: var(--color-light-gray);
+  font-size: 16px;
+  line-height: 1.75;
+ }
+
+ .container {
+  max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
+  margin-inline: auto;
+  padding-inline: var(--container-padding-x);
+ }
+
+ h1, h2, h3, h4, h5, h6 {
+  font-weight: 700;
+  text-transform: uppercase;
  }
