feat: complete adaptive styles for header

--- a/styles.css
+++ b/styles.css
@@ -245,7 +245,7 @@ h6 {
   text-transform: uppercase;
   background-color: var(--color-light);
   border: none;
-  border: var(--border-radius);
+  border-radius: var(--border-radius);
   white-space: nowrap;
 }
 
@@ -258,6 +258,7 @@ h6 {
   justify-content: space-between;
   align-items: center;
   column-gap: 20px;
+  padding-inline: 32px;
 }
 
 .header-logo {
@@ -266,7 +267,8 @@ h6 {
 
 .header-menu-list {
   display: flex;
-  column-gap: 20px;
+  flex-wrap: wrap;
+  column-gap: 50px;
 }
 
 .header-menu-link {
@@ -318,4 +320,44 @@ h6 {
   height: 1px;
   background-color: currentColor;
   box-shadow: 16px 0 0 currentColor;
+}
+
+@media (max-width: 1024px) {
+  .header {
+    flex-wrap: wrap;
+    row-gap: 10px;
+    padding-top: 10px;
+    padding-inline: 15px;
+  }
+
+  .header-menu {
+    order: 1;
+    flex-basis: 100%;
+  }
+
+  .header-menu-link {
+    height: 50px;
+  }
+}
+
+@media (max-width: 767px) {
+  .button {
+    padding-inline: 18px;
+  }
+
+  .header {
+    padding-top: 10px;
+  }
+
+  .header-menu-list {
+    column-gap: 24px;
+  }
+
+  .header-menu-link {
+    height: 32px;
+  }
+
+  .header-actions {
+    column-gap: 15px;
+  }
 }
