complete section upcoming events

--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,7 @@ svg * {
 
 :root {
   --color-dark: #000000;
+  --color-dark-alternate: #131619;
   --color-light: #ffffff;
   --color-dark-gray: #404040;
   --color-light-gray: #c4c4c4;
@@ -191,6 +192,8 @@ svg * {
   --container-padding-x: 15px;
 
   --transition-duration: 0.2s;
+
+  --header-height: 90px;
 }
 
 body {
@@ -233,6 +236,19 @@ h6 {
   text-transform: uppercase;
 }
 
+.visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  aspect-ratio: 1 !important;
+  margin: -1px !important;
+  border: 0 !important;
+  padding: 0 !important;
+  white-space: nowrap !important;
+  clip-path: inset(100%) !important;
+  clip: rect(0 0 0 0) !important;
+  overflow: hidden !important;
+}
+
 .button {
   display: inline-flex;
   align-items: center;
@@ -255,10 +271,12 @@ h6 {
 
 .header {
   display: flex;
+  background-color: var(--color-dark-alternate);
   justify-content: space-between;
   align-items: center;
   column-gap: 20px;
   padding-inline: 32px;
+  min-height: var(--header-height);
 }
 
 .header-logo {
@@ -275,7 +293,7 @@ h6 {
   display: inline-flex;
   column-gap: 7px;
   align-items: center;
-  height: 90px;
+  height:  var(--header-height);
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 700;
@@ -286,7 +304,7 @@ h6 {
 .header-menu-link.is-current::after {
   content: "";
   width: 5px;
-  height: 5px;
+  aspect-ratio: 1;
   border-radius: 50%;
   background-color: currentColor;
 }
@@ -303,10 +321,10 @@ h6 {
   row-gap: 4px;
   padding-left: 8px;
   width: 40px;
-  height: 40px;
+  aspect-ratio: 1;
   background-color: transparent;
   border: var(--border);
-  border-radius: var(--border-radius);
+  border-radius: 50%;
   color: var(--color-light);
 }
 
@@ -322,11 +340,86 @@ h6 {
   box-shadow: 16px 0 0 currentColor;
 }
 
+.banner {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  padding: 36px 70px;
+  min-height: calc(100vh - var(--header-height));
+  color: var(--color-light);
+  background-color: var(--color-dark-alternate);
+}
+
+.banner-body {
+  text-transform: uppercase;
+}
+
+.banner-info {
+  display: flex;
+  align-items: end;
+  font-size: clamp(16px, 1.56vw, 30px);
+  line-height: 1.27;
+  font-weight: 700;
+}
+
+.banner-info::before {
+  content: '';
+  width: clamp(60px, 10.1vw, 194px);
+  aspect-ratio: 1;
+  margin-right: 30px;
+  background: url('./icons/arrow.svg') center/contain no-repeat;
+}
+
+.banner-title {
+  font-size: min(18.75vw, 360px);
+  line-height: 1;
+}
+
+.banner-pagination-list {
+  display: flex;
+  justify-content: center;
+}
+
+.banner-pagination-item {
+  display: flex;
+}
+
+.banner-pagination-button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  padding: 7px;
+  background-color: transparent;
+  border: none
+}
+
+.banner-pagination-button::after {
+  content: '';
+  width: 10px;
+  aspect-ratio: 1;
+  border: var(--border);
+  border-radius: 50%;
+  transition: var(--transition-duration);
+}
+
+.banner-pagination-button.is-current::after {
+  background-color: var(--color-light);
+}
+
+.banner-pagination-button:not(.is-current):hover::after {
+  border-color: var(--color-light-gray);
+}
+
 @media (max-width: 1024px) {
   .header {
     flex-wrap: wrap;
     row-gap: 10px;
     padding-top: 10px;
+  }
+
+  .banner,
+  .header {
     padding-inline: 15px;
   }
 
@@ -337,6 +430,10 @@ h6 {
 
   .header-menu-link {
     height: 50px;
+  }
+
+  .banner {
+    row-gap: 10px;
   }
 }
 
@@ -359,5 +456,13 @@ h6 {
 
   .header-actions {
     column-gap: 15px;
+  }
+  
+  .banner-info {
+    margin-bottom: 5px;
+  }
+
+  .banner-info::before {
+    margin-right: 10px;
   }
 }
