--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,9 @@ svg *[stroke] {
 svg * {
   transition-property: fill, stroke;
 }
+svg * {
+  transition-property: fill, stroke;
+}
 
 /**
 Удаляем все анимации и переходы для людей,
@@ -194,6 +197,8 @@ svg * {
   --transition-duration: 0.2s;
 
   --header-height: 90px;
+
+  --footerLogoWidth: 20.77%;
 }
 
 body {
@@ -203,6 +208,9 @@ body {
   font-size: 16px;
   line-height: 1.75;
 }
+
+svg *[fill] {fill: currentColor}
+svg *[stroke] {stroke: currentColor}
 
 .title-medium {
   font-size: clamp(20px, 2.08vw, 40px);
@@ -885,6 +893,120 @@ input[type=number] {
   padding-bottom: 0px;
 }
 
+.footer {
+  --footerLogoWidth: 20.77%;
+}
+
+.footer-main {
+  padding-top: 140px;
+  padding-bottom: 160px;
+}
+
+.footer-header,
+.footer-body {
+  display: grid;
+  column-gap: 62px;
+}
+
+.footer-header {
+  grid-template-columns:  var(--footerLogoWidth) auto;
+}
+
+.footer-header:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.footer-logo-image {
+  height: auto;
+}
+
+.footer-description {
+  text-align: left;
+}
+
+.footer-body {
+  grid-template-columns: var(--footerLogoWidth) repeat(3, 1fr);
+}
+
+.footer-column-title {
+  font-size: clamp(18px, 1.15wv, 22px);
+}
+
+.footer-column-title:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.footer-schedule:not(:last-child) {
+  margin-bottom: 13px;
+}
+
+.footer-address {
+  font-style: normal;
+}
+
+.footer-address:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.footer-column-title.has-arrow::after {
+  content: "";
+  display: inline-block;
+  height: 0.74em;
+  aspect-ratio: 1;
+  background: url("./icons/arrow.svg") center/contain no-repeat;
+  scale: -1 1;
+  margin-left: 0.5em;
+}
+
+.footer-subscribe {
+  position: relative;
+}
+
+.footer-subscribe-input {
+  padding-right: 70px;
+}
+
+.footer-subscribe:not(:last-child) {
+  margin-bottom: 50px;
+}
+
+.footer-subscribe-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: url("./icons/arrow-rotate.svg") center/70% no-repeat;
+  border: var(--border);
+}
+
+.footer-subscribe-button:hover {
+  background: url("./icons/arrow-rotate-dark.svg") center/70% no-repeat;
+  background-color: var(--color-light-gray);
+  border: solid 1px var(--color-dark);
+}
+
+.footer-soc1als-list {
+  display: flex;
+  align-items: center;
+  column-gap: 18px;
+}
+
+.footer-soc1als-link {
+  display: flex;
+  width: 23px;
+}
+
+.footer-copyright {
+  font-size: 14px;
+}
+
+.footer-extra {
+  padding-block: 15px;
+  background-color: var(--color-dark-alternate);
+}
+
 @media (max-width: 1919px) {
   .motivation-card-image {
     margin-block: -20px;
@@ -947,6 +1069,45 @@ input[type=number] {
 
   .family-image {
     height: 360px;
+  }
+
+  .calculate {
+    padding-block: 100px;
+  }
+
+  .calculate-inner {
+    column-gap: 20px;
+  }
+
+  .calculate-form-body {
+    grid-template-columns: 1fr;
+  }
+  .calculate-button {
+    width: 100%;
+  }
+
+  .calculate-table :is(td, th) {
+    padding-block: 10px;
+  }
+
+  .calculate-table tfoot td {
+    padding-top: 10px;
+  }
+
+  .footer-main {
+    padding-top: 80px;
+    padding-bottom: 50px;
+  }
+
+  .footer-header {
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+  }
+
+  .footer-body {
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 30px;
   }
 }
 
@@ -1043,5 +1204,34 @@ input[type=number] {
   }
   .family-image {
     height: 180px;
+  }
+
+  .calculate-inner {
+    flex-direction: column;
+    row-gap: 30px;
+  }
+
+  .calculate-table-wrapper::before {
+    display: none;
+  }
+
+  .calculate {
+    padding-block: 60px;
+  }
+
+  .footer-body {
+    grid-template-columns: 1fr;
+  }
+
+  .footer-main {
+    padding-top: 50px;
+  }
+
+  .family-header:not(:last-child) {
+    margin-bottom: 30px;
+  }
+
+  .footer-subscribe:not(:last-child) {
+    margin-bottom: 40px;
   }
 }
